# parallel-face-search

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-gpu-amd.txt  requirements-gpu.txt  requirements.txt
.github/workflows/: sync-mj-procurados.yml
docs/: ACCURACY_ROADMAP.md  APRESENTACAO_SLIDES.md  RELATORIO_TECNICO.md  WINDOWS_SETUP.md
face_search/: __init__.py  evaluation.py
face_search/cli/: __init__.py  build_local_gallery.py  check_environment.py  evaluate_accuracy.py  match_images.py  sync_gallery.py  webcam_search.py
face_search/engine/: __init__.py  config.py  detection.py  embedding.py  quality.py  regions.py
face_search/gallery/: __init__.py  builder.py  manifest.py  r2.py  scraper.py
face_search/matching/: __init__.py  candidate.py  search.py  similarity.py
face_search/tracking/: __init__.py  evidence.py  tracker.py
face_search/webcam/: __init__.py  camera.py  hud.py  pipeline.py
scripts/: check_environment.py  sync_mj_procurados.py  webcam_face_search.py
